--- a/index.html
+++ b/index.html
@@ -2648,7 +2648,22 @@ function csvGenerateVeh(data, header = false, sepField = ",", sepRow = "\r\n") {
 
 
 function copyToClipboard(txt){
-    navigator.clipboard.writeText(txt);
+    if (navigator.clipboard) {
+        navigator.clipboard.writeText(txt);
+    } else {
+        var textArea = document.createElement("copyTextArea");
+        textArea.style.top = "0";
+        textArea.style.left = "0";
+        textArea.style.position = "fixed";
+        
+        textArea.value = txt;
+
+        document.body.appendChild(textArea);
+        textArea.focus();
+        textArea.select();
+        document.execCommand('copy');
+        document.body.removeChild(textArea);
+    }
 }
 
 function jsonCopy(){
