--- a/index.html
+++ b/index.html
@@ -1142,10 +1142,18 @@ RANK Last, First
 <br>Su/Holidays: 0900-1230, 1630-1800
 <br></fieldset>
 <br>
-<fieldset><details open><summary>New inbounds - Week 0</summary>
-<br>Monday (or first day after a holiday/confirm with a DS)
-<br>0700-1130 @ Eifler Gym - Uniform: ACU (OCP)
-<br>Bring: In-Processing packet, BCT Packet, 5x copies of orders, 2x copies of DA31
+<fieldset><details open><summary>New inbounds - Week 1</summary>
+
+<br>Saturday
+<br>0730-1630 - Financial Management Course @ SHC Barracks MPR
+<br>
+<br>
+
+<br>Monday
+<br>(or first day after a holiday/confirm with a DS)
+<br>0700-1130 - BDE In-Processing @ Eifler Gym
+<br>-Uniform: ACU (OCP)
+<br>-Bring: In-Processing packet, BCT Packet, 5x copies of orders, 2x copies of DA31
 <br>***Eat breakfast before you go there.
 <br>
 <br>S1
@@ -1176,42 +1184,27 @@ RANK Last, First
 <br>Clean the gym
 <br>-Sweep and wipe down everything that was touched (chairs, bleachers, tables)
 <br><br>
-<br>0700-0900 - RAPIDS Escape room
-<br>(0645/0745 @ SHC Barracks Day room - 8x Soldiers max per session/van per hour)
-<br>
-<br>1300-1400 - Co CDR & 1SG In-Brief
-<br>1400-1500 - H2F (Holistic Health and Fitness)
-<br>
-<br>
+<br>1300-1400 - MEO Training
+<br>1400-1700 - H2F (Holistic Health and Fitness)
+<br>TBD - Co CDR & 1SG In-Brief
+<br><br>
 <br>Tuesday
 <br>0800-UTC - CIF
-<br>(0730 @ DFAC 309th side)
+<br>(0720 @ DFAC parking lot side)
 <br>
-<br>0700-0900 - RAPIDS Escape room
-<br>(0645/0745 @ SHC Barracks Day room - 8x Soldiers max per session/van per hour)
-<br>1300-1400 - H2F (Holistic Health and Fitness)
+<br>0830-1130 - RAPIDS Escape room
+<br>(trans. from CIF to barracks to RAPIDS - 8x Soldiers max per session/van per hour)
+<br><br>
+<br>0800-0930 -  (16x Soldiers max per session)
 <br>
-<br>
+<br>1300-1400 - Safety/Accident Avoidance
+<br>1400-UTC - RAPIDS/REACH Training
+<br><br>
 <br>Wednesday
-<br>0700-1630 - Financial Management Course @ SHC Barracks MPR
-<br>(0600 - Accountability Formation in OCPs, release to DFAC)
-<br>
-<br>
-<br>Thursday
-<br>0800-0930 - REACH Training @ SHC Barracks MPR (16x Soldiers max per session)
-<br>
-<br>0930-UTC - Safety/Accident Avoidance @ SHC Barracks MPR
-<br>
-<br>1300-1400 - H2F (Holistic Health and Fitness)
-<br>1400-1600 - MEO Training @ SHC Barracks MPR
-<br>
-<br>
-<br>Friday
-<br>0930-UTC - MI History Hunt @ MI Museum 
-<br>(0915 @ SHC Barracks Day room)
+<br>0830-UTC - MI History Hunt
 
 <br>
-</details></fieldset><!-- Week 0 -->
+</details></fieldset><!-- Week 1 -->
 
 
 <br>
@@ -1266,8 +1259,13 @@ RANK Last, First
 </details></fieldset><!-- Volunteer -->
 <br>
 
-<fieldset><details><summary>Leave/Holiday Block Leave</summary>
-
+<fieldset><details open><summary>Leave/Holiday Block Leave</summary>
+<br>
+<br>Dates: 20 DEC 2021 - 04 JAN 2022
+<br>Airport: TUS (Tucson International Airport)
+<br>
+<br>
+<br>
 <br>Track flights prices:
 <br><a href="https://www.google.com/flights" target="_blank">https://www.google.com/flights</a>
 <br>-You can use Google to track the flight price changes and decide when is a good /better time/date to buy them.
@@ -1288,6 +1286,10 @@ RANK Last, First
 <br>
 <br>Bus tickets can be bought at:
 <br><a href="https://huachucashuttle.com" target="_blank">https://huachucashuttle.com</a>
+<br>Should be about $35 per trip
+<br><br>
+<br>Call to report changes tonyour itinerary.
+<br><a href="tel:520-439-0439">520-439-0439</a><label> - Huachuca Shuttle</label>
 
 <br>
 </details></fieldset><!-- Leave/HBL -->
