--- a/index.html
+++ b/index.html
@@ -998,14 +998,23 @@ border: solid 2px;
   <br><label>SHC Gmail: </label><a href="mailto:shc111th@gmail.com?subject=In%2DProcessing%20Data%20Sheet" target="_blank">shc111th@gmail.com</a>
 <br>
   <!--a href="javascript:void(0)" onclick="emailSend()">Hold Company Email</a-->
-<br><br>**Encrypt your email before sending it**
+
+<br>-Don't forget to attach your file!
+<br>
+<br>-If you can't download the file,
+<br>  try to copy the contents (copy to clipboard), 
+<br>  and send (paste) it in the body of the email.
+<br>
+<br>-Don't send a CSV file.
+
+<br><br><p hidden>**Encrypt your email before sending it**</p>
 
 </p>
 <details><summary>iPhone users</summary>
   <p>If when you click on 'Download JSON' a new page opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
 </details>
 <br>
-<details open><summary>Gmail users</summary>
+<details open hidden><summary>Gmail users</summary>
   <p>Before sending the email, go to the email options (right side, three vertical dots on Android) and choose 'Confidential mode'.
   <br>Don't choose 1 day.
   <br>1 week should be long enough.
