--- a/index.html
+++ b/index.html
@@ -961,6 +961,9 @@ border: solid 2px;
     <fieldset><legend>Contraband:</legend>
       <p>Any non-military issue clothing/Civilian clothing/BCT T-Shirt, hoodie, etc.</p>
       <p>Any electronics, NOT including/except smart watch and phone.</p>
+      <p>Turn in at bed check (by floor)
+      <br>-get your contraband outside of your door by bed check
+      </p>
     </fieldset>
     <br>
     <fieldset><legend>Abbreviations:</legend>
