--- a/index.html
+++ b/index.html
@@ -966,6 +966,12 @@ border: solid 2px;
 <br>  and send (paste) it in the body of the email.
 <br>
 <br>-Don't send a CSV file.
+<br>
+<br>-If you refresh the page, all of your information will be lost.
+<br> If you need to continue working on it, save your JSON and load it when ready to continue (then download it again when completed).
+<br>
+<br>-Don't send a CSV file.
+
 
 <br><br><p hidden>**Encrypt your email before sending it**</p>
 
