--- a/index.html
+++ b/index.html
@@ -949,10 +949,6 @@ border: solid 2px;
     <span class="tooltiptext" id="tooltipCopyJSON">Copy to Clipboard</span>Copy to Clipboard</button>
 </div>
 
-<br><br><label for="fileInput">Load JSON:</label>
-<input type="file" id="fileInput" multiple><button id="csvFileDownload" onclick="csvFileDownload()" target="_blank" hidden>Download CSV</button>
-<br><br>
-
 <p>Send your JSON file to: 
   <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">SHC Gmail</a>
   <br><label>SHC Gmail: </label><a href="mailto:shc111th@gmail.com?subject=In%2DProcessing%20Data%20Sheet" target="_blank">shc111th@gmail.com</a>
@@ -971,9 +967,14 @@ border: solid 2px;
 <br> If you need to continue working on it, save your JSON and load it when ready to continue (then download it again when completed).
 <br>
 <br>-Don't send a CSV file.
+<br>
+
+<br><br><label for="fileInput">Load JSON:</label>
+<input type="file" id="fileInput" multiple><button id="csvFileDownload" onclick="csvFileDownload()" target="_blank" hidden>Download CSV</button>
+<br><br>
 
 
-<br><br><p hidden>**Encrypt your email before sending it**</p>
+<p hidden>**Encrypt your email before sending it**</p>
 
 </p>
 <details><summary>iPhone users</summary>
