--- a/index.html
+++ b/index.html
@@ -2081,7 +2081,7 @@ RANK Last, First
 <footer>
   <p>Created by: HernandezGarcia, Jorge
   <br><a href="mailto:jorge.hernandezgarcia.mil@mail.mil">jorge.hernandezgarcia.mil@mail.mil</a>
-  <br><br><label>Source code: </label><a href="https://github.com/jorgepr13/hold-co">https://github.com/jorgepr13/hold-co</a>
+  <br><br><label>Source code: </label><a href="https://github.com/jorgepr13/hold-co" target="_blank">https://github.com/jorgepr13/hold-co</a>
   </p>
 </footer>
 
