--- a/index.html
+++ b/index.html
@@ -124,6 +124,8 @@ border: solid 2px;
   <option value="Friend">
   <option value="Father-in-law">
   <option value="Mother-in-law">
+  <option value="Step-Father">
+  <option value="Step-Mother">
 </datalist>
 <datalist id="COVIDVacManu">
   <option value="Moderna">
