--- a/index.html
+++ b/index.html
@@ -1542,7 +1542,7 @@ RANK Last, First
 
 <br>Confessions: by Appointment 
 <br>
-<br>1215 - Friday - Mail Post Chapel, Room 24 - Muslim
+<br>1215 - Friday - Main Post Chapel, Room 24 - Muslim
 <br>1830 - Friday - Prosser Chapel - Hospitality House
 
 <br>
@@ -1883,6 +1883,12 @@ RANK Last, First
 <br><a href="tel:1-888-767-2445">1-888-767-2445</a>
 <br><a href="tel:520-533-1670">520-533-1670</a>
 <br><a href="tel:520-533-8895">520-533-8895</a>
+
+<br><br><a href="https://www.p3tips.com" target="_blank">https://www.p3tips.com</a> - Submit an anonymous tip
+
+<br><br><a href="https://www.ic3.gov" target="_blank">https://www.ic3.gov</a> - Report Online Scam
+
+<br>
 
 </details></fieldset><!-- Law -->
 
